--- a/main.html
+++ b/main.html
@@ -10,6 +10,24 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>patna</h1><br>
+		<p>Brief overview of the destination</p>
+	<ol>
+		<li><i>abcd<i></li>
+		<li><i>abcd<i></li>
+		<li><i>abcd<i></li>
+		<li><i>abcd<i></li>
+		<li><i>abcd<i></li>
+	</ol>
+	<ul>
+		<li><b>jhgf<b></li>
+			<li><b>jhgf<b></li>
+			<li><b>jhgf<b></li>
+				<li><b>jhgf<b></li>
+			<li><b>jhgf<b></li>
+			<li><b>jhgf<b></li>
+					
+	</ul>
 
 </body>
 
